--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -32,7 +32,7 @@ jobs:
             node_modules
 
       - name: Lint
-        run: npx vagov-eslint lint:js
+        run: npm run lint
 
   testing:
     name: Testing
@@ -87,23 +87,34 @@ jobs:
       - name: Build
         run: GITHUB_API_KEY=${{ env.VA_VSP_BOT_GITHUB_TOKEN }} npm run build
 
+      - name: Compress documentation build
+        # if: github.ref == 'refs/heads/master'
+        run: tar -C packages/documentation/public -cvf documentation.tar.bz2 .
+
+      - name: Upload documentation build artifact
+        # if: github.ref == 'refs/heads/master'
+        uses: actions/upload-artifact@v2
+        with:
+          name: documentation.tar.bz2
+          path: documentation.tar.bz2
+          retention-days: 1
+
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
     needs: [linting, testing, build]
-    if: github.ref == 'refs/heads/master'
+    # if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install dependencies
-        uses: ./.github/workflows/install
+      - name: Download documentation build artifact
+        uses: actions/download-artifact@v2
         with:
-          key: ${{ hashFiles('yarn.lock') }}
-          yarn_cache_folder: .cache/yarn
-          path: |
-            .cache/yarn
-            node_modules
+          name: documentation.tar.bz2
+
+      - name: Extract documentation build artifact
+        run: tar -C packages/documentation/public -xvf documentation.tar.bz2
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
