--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -102,11 +102,20 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [linting, testing, build]
+    needs: [linting, build]
     # if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Install dependencies
+        uses: ./.github/workflows/install
+        with:
+          key: ${{ hashFiles('yarn.lock') }}
+          yarn_cache_folder: .cache/yarn
+          path: |
+            .cache/yarn
+            node_modules
 
       - name: Download documentation build artifact
         uses: actions/download-artifact@v2
@@ -114,7 +123,9 @@ jobs:
           name: documentation.tar.bz2
 
       - name: Extract documentation build artifact
-        run: tar -C packages/documentation/public -xvf documentation.tar.bz2
+        run: |
+          mkdir packages/documentation/public
+          tar -C packages/documentation/public -xvf documentation.tar.bz2
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -137,4 +148,4 @@ jobs:
       - name: Deploy
         run: |
           git remote set-url origin https://git:${{ env.VA_VSP_BOT_GITHUB_TOKEN }}@github.com/department-of-veterans-affairs/veteran-facing-services-tools.git
-          GITHUB_API_KEY=${{ env.VA_VSP_BOT_GITHUB_TOKEN }} npm run deploy
+          npm run deploy
