--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -112,12 +112,14 @@ jobs:
         id: get-node-version
         run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
 
-      - name: Install dependencies
+      - name: Setup Node
         uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.get-node-version.outputs.NODE_VERSION }}
           cache: 'yarn'
           cache-dependency-path: packages/documentation/yarn.lock
+
+      - name: Install dependencies
         run: yarn install --frozen-lockfile --prefer-offline --production=false
         working-directory: packages/documentation
 
