--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -88,11 +88,11 @@ jobs:
         run: GITHUB_API_KEY=${{ env.VA_VSP_BOT_GITHUB_TOKEN }} npm run build
 
       - name: Compress documentation build
-        if: github.ref == 'refs/heads/master'
+        # if: github.ref == 'refs/heads/master'
         run: tar -C packages/documentation/public -cvf documentation.tar.bz2 .
 
       - name: Upload documentation build artifact
-        if: github.ref == 'refs/heads/master'
+        # if: github.ref == 'refs/heads/master'
         uses: actions/upload-artifact@v2
         with:
           name: documentation.tar.bz2
@@ -121,7 +121,7 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile --prefer-offline --production=false
-        working-directory: packages/documentation
+        working-directory: ./packages/documentation
 
       - name: Download documentation build artifact
         uses: actions/download-artifact@v2
