--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -102,7 +102,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: [linting, build]
+    # needs: [linting, build]
     # if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout
@@ -123,15 +123,15 @@ jobs:
         run: yarn install --frozen-lockfile --prefer-offline --production=false
         working-directory: ./packages/documentation
 
-      - name: Download documentation build artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: documentation.tar.bz2
+      # - name: Download documentation build artifact
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: documentation.tar.bz2
 
-      - name: Extract documentation build artifact
-        run: |
-          mkdir packages/documentation/public
-          tar -C packages/documentation/public -xvf documentation.tar.bz2
+      # - name: Extract documentation build artifact
+      #   run: |
+      #     mkdir packages/documentation/public
+      #     tar -C packages/documentation/public -xvf documentation.tar.bz2
 
       # - name: Configure AWS credentials
       #   uses: aws-actions/configure-aws-credentials@v1
