--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -116,8 +116,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.get-node-version.outputs.NODE_VERSION }}
-          cache: 'yarn'
-          cache-dependency-path: packages/documentation/yarn.lock
+          # cache: 'yarn'
+          # cache-dependency-path: packages/documentation/yarn.lock
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile --prefer-offline --production=false
