--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -112,16 +112,16 @@ jobs:
         id: get-node-version
         run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
 
-      - name: Setup Node
+      - name: Setup Node and cache documentation dependencies
         uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.get-node-version.outputs.NODE_VERSION }}
-          # cache: 'yarn'
-          # cache-dependency-path: packages/documentation/yarn.lock
+          cache: 'yarn'
+          cache-dependency-path: packages/documentation/yarn.lock
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile --prefer-offline --production=false
-        working-directory: ./packages/documentation
+        working-directory: packages/documentation
 
       # - name: Download documentation build artifact
       #   uses: actions/download-artifact@v2
