--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -88,11 +88,11 @@ jobs:
         run: GITHUB_API_KEY=${{ env.VA_VSP_BOT_GITHUB_TOKEN }} yarn build
 
       - name: Compress documentation build
-        # if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         run: tar -C packages/documentation/public -cvf documentation.tar.bz2 .
 
       - name: Upload documentation build artifact
-        # if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         uses: actions/upload-artifact@v2
         with:
           name: documentation.tar.bz2
@@ -103,7 +103,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: [linting, build]
-    # if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -138,26 +138,26 @@ jobs:
           mkdir packages/documentation/public
           tar -C packages/documentation/public -xvf documentation.tar.bz2
 
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: us-gov-west-1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-gov-west-1
 
-      # - name: Get va-vsp-bot token
-      #   uses: marvinpinto/action-inject-ssm-secrets@v1.2.1
-      #   with:
-      #     ssm_parameter: /devops/VA_VSP_BOT_GITHUB_TOKEN
-      #     env_variable_name: VA_VSP_BOT_GITHUB_TOKEN
+      - name: Get va-vsp-bot token
+        uses: marvinpinto/action-inject-ssm-secrets@v1.2.1
+        with:
+          ssm_parameter: /devops/VA_VSP_BOT_GITHUB_TOKEN
+          env_variable_name: VA_VSP_BOT_GITHUB_TOKEN
 
-      # - name: Set username and email
-      #   run: |
-      #     git config user.email va-vsp-bot@users.noreply.github.com
-      #     git config user.name va-vsp-bot
+      - name: Set username and email
+        run: |
+          git config user.email va-vsp-bot@users.noreply.github.com
+          git config user.name va-vsp-bot
 
-      # - name: Deploy
-      #   run: |
-      #     git remote set-url origin https://git:${{ env.VA_VSP_BOT_GITHUB_TOKEN }}@github.com/department-of-veterans-affairs/veteran-facing-services-tools.git
-      #     yarn deploy
-      #   working-directory: packages/documentation
+      - name: Deploy
+        run: |
+          git remote set-url origin https://git:${{ env.VA_VSP_BOT_GITHUB_TOKEN }}@github.com/department-of-veterans-affairs/veteran-facing-services-tools.git
+          yarn deploy
+        working-directory: packages/documentation
