Add first draft of telephone ESLint rule

--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -75,5 +75,8 @@
     "testPathIgnorePatterns": [
       "<rootDir>/tests/helpers/"
     ]
+  },
+  "dependencies": {
+    "jsx-ast-utils": "^3.3.3"
   }
 }
