Fix eslint-plugin tests (#862)
* Fix path

* Use new react-bindings path in test

* Add eslint-plugin to learna packages

* Bump package version

* Remove vagov-eslint from lerna config

--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,8 @@
 {
   "packages": [
     "packages/documentation",
-    "packages/formation",
-    "packages/vagov-eslint"
+    "packages/eslint-plugin",
+    "packages/formation"
   ],
   "version": "independent",
   "npmClient": "yarn",
